--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dompurify": "^3.1.5",
+    "firebase": "^10.12.2",
     "javascript-time-ago": "^2.5.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
